2.5.6 -> 2.5.7:
	- update URL in man page.
	- use portable #!/bin/sh (Tim Mooney).
	- don't erase failing build script (Tim Mooney).
	- use portable mkinstalldirs (Tim Mooney).
	- irix6 autodeps were dup'd (Shing-Gene Yung <shing@cz3.nus.edu.sg>).
	- getservbyname needed ntohs().
	- propagate "const char *" into rpmlib prototypes.
	- use "original db-1.85" if available (Raw Hide glibc 2.1).
	- make sure files to sign exist before asking for the pass phrase
	- added ARM patches

2.5.5 -> 2.5.6:
	- ultrapenguin 1.1.9 sparc64 changes.
	- attempt ftp ABOR on query/verify url's.
	- cache open ftp control descriptor with password.
	- verify needed same realpath semantics as query.
	- plug fd leak in urlGetFile().
	- translate cpio errors using cpioStrerror.
	- display "..?....." rather than "..5....." for unreadable files.
	- run time (rather than compile time) host endian check.
	- caldera patches (ray@Caldera.DE)
	- added ARM patches.
	- fix incorrect directory permissions using %attr/%defattr.
	- permit "rpm -q --specfile ... file.spec" queries.
	- strncasecmp on spec file separators (KDE has %Description).
	- remove redundant md5 computation on uninstall.
	- permit --rmsource --force even if sources/patches are missing.
	- don't compute md5sum on non-file %config objects. (from Jos Vos)
	- check arch only on RPMBUILD_{PREP,BUILD,INSTALL,PACKAGEBINARY}.
	- configure.in: set default value for RPM. (Tim Mooney)
	- add new Epoch: keyword just like Serial:.
	- update Russian translation w man pages.
	- solaris: don't attempt static link. (Tim Mooney)
	- fix: timeCheck in rpm.c should be unsigned long. (Tim Mooney)
	- osf: prov searches only shared libraries. (Tim Mooney)
	- solaris: set PATH in prov/req scripts. (Tim Mooney)
	- fix: ignore modes on symlinks. (Tim Mooney)
	- sub-packages inherit RPMTAG_EPOCH (just like RPMTAG_VERSION/RELEASE).
	- fix off-by-1 alloca that prevented relocating /.
	- add %include (Tom Dyas<tdyas@remus.rutgers.edu>)